--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,6 +27,10 @@
           <a href="http://es.wikipedia.org/wiki/Quiz">
             ¿Que es un Quiz?
           </a>
+          <br>
+          <a href="https://github.com/agustinfrancoconceglieri/quiz">
+           Proyecto Quiz en GitHub
+          </a>
        </footer>
     </div>
   </body>
